# ipc_ring

./: CRASH_BEHAVIOR.md  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
docs/: ARCHITECTURE.md  CRASH_BEHAVIOR.md
examples/: reader.rs  writer.rs
src/: lib.rs
src/event/: fallback.rs  linux.rs  mod.rs
tests/: correctness_test.rs  debug_assert_cov.rs  failpoints.rs  simple_stream.rs
