[package]
name = "ipc_ring"
version = "0.1.0"
edition = "2021"
authors = ["Leander Kohler"]
description = "High-performance memory-mapped SPSC ring buffer for Unix IPC"
license = "MIT"
repository = "https://github.com/Coffeeri/ipc_ring"
documentation = "https://docs.rs/ipc_ring"
homepage = "https://github.com/Coffeeri/ipc_ring"
readme = "README.md"
keywords = ["ipc", "ring-buffer", "mmap", "unix", "spsc"]
categories = ["os", "concurrency", "memory-management"]

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
memmap2   = "0.9"
raw_sync  = "0.1"
thiserror = "1"

[dependencies.fail]
version = "0.5"
optional = true
features = ["failpoints"]

[features]
# unix-only crate (Linux + macOS)
failpoints = ["fail"]
